// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card deve aplicar estilos de padding 1`] = `
<View
  activeOpacity={1}
  style={
    [
      {
        "backgroundColor": "#ffffff",
        "borderRadius": 12,
      },
      {},
      {
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.12,
        "shadowRadius": 6,
      },
      {
        "padding": 20,
      },
      undefined,
    ]
  }
>
  <Text>
    Large Padding
  </Text>
</View>
`;

exports[`Card deve aplicar estilos de variante 1`] = `
<View
  activeOpacity={1}
  style={
    [
      {
        "backgroundColor": "#ffffff",
        "borderRadius": 12,
      },
      {
        "borderColor": "#e5e7eb",
        "borderWidth": 1,
      },
      undefined,
      {
        "padding": 16,
      },
      undefined,
    ]
  }
>
  <Text>
    Outlined
  </Text>
</View>
`;
